force-app/main/default/objects/Line_Met_Dimension__c/Line_Met_Dimension__c.object-meta.xml
<CustomObject>
    <label>Line Metric Dimension</label>
    <nameField>
        <displayFormat>LMD-{0000}</displayFormat>
        <label>Line Metric Dimension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Metric Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>