force-app/main/default/objects/Line_Met_Dimension__c/fields/Additions_PTD__c.field-meta.xml
<CustomField>
    <fullName>Additions_PTD__c</fullName>
    <label>Additions PTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>