force-app/main/default/objects/Line_Met_Dimension__c/fields/Additions_QTD__c.field-meta.xml
<CustomField>
    <fullName>Additions_QTD__c</fullName>
    <label>Additions QTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>