force-app/main/default/objects/Line_Met_Dimension__c/fields/Additions_UTD__c.field-meta.xml
<CustomField>
    <fullName>Additions_UTD__c</fullName>
    <label>Additions UTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>