force-app/main/default/objects/Line_Met_Dimension__c/fields/Current_Qtr_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Qtr_Revenue__c</fullName>
    <label>Current Qtr Revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>