force-app/main/default/objects/Line_Met_Dimension__c/fields/Ending_Balance_PTD__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_PTD__c</fullName>
    <label>Ending Balance PTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>