force-app/main/default/objects/Line_Met_Dimension__c/fields/Line_Metric_GUID__c.field-meta.xml
<CustomField>
    <fullName>Line_Metric_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Line Metric GUID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>