force-app/main/default/objects/Line_Met_Dimension__c/fields/Next_Qtr_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Qtr_Revenue__c</fullName>
    <label>Next Qtr Revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>