force-app/main/default/objects/Line_Met_Dimension__c/fields/Opening_Balance_QTD__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance_QTD__c</fullName>
    <label>Opening Balance QTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>