force-app/main/default/objects/Line_Met_Dimension__c/fields/Planned_PTD__c.field-meta.xml
<CustomField>
    <fullName>Planned_PTD__c</fullName>
    <label>Planned PTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>