force-app/main/default/objects/Line_Met_Dimension__c/fields/Planned_QTD__c.field-meta.xml
<CustomField>
    <fullName>Planned_QTD__c</fullName>
    <label>Planned QTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>