force-app/main/default/objects/Line_Met_Dimension__c/fields/Planned_UTD__c.field-meta.xml
<CustomField>
    <fullName>Planned_UTD__c</fullName>
    <label>Planned UTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>