force-app/main/default/objects/Line_Met_Dimension__c/fields/Planned_YTD__c.field-meta.xml
<CustomField>
    <fullName>Planned_YTD__c</fullName>
    <label>Planned YTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>