force-app/main/default/objects/Line_Met_Dimension__c/fields/Recognized_PTD__c.field-meta.xml
<CustomField>
    <fullName>Recognized_PTD__c</fullName>
    <label>Recognized PTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>