force-app/main/default/objects/Line_Met_Dimension__c/fields/Recognized_YTD__c.field-meta.xml
<CustomField>
    <fullName>Recognized_YTD__c</fullName>
    <label>Recognized YTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>