force-app/main/default/objects/Line_Met_Dimension__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>