force-app/main/default/objects/Line_Met_Dimension__c/fields/Revenue_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_ID__c</fullName>
    <label>Revenue Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>