force-app/main/default/objects/Line_Met_Dimension__c/fields/Revenue_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract Line</label>
    <referenceTo>Revenue_Contract_Line__c</referenceTo>
    <relationshipLabel>Line Metric Dimensions</relationshipLabel>
    <relationshipName>Line_Met_Dimensions</relationshipName>
    <type>Lookup</type>
</CustomField>