force-app/main/default/objects/Line_Met_Dimension__c/fields/Unplanned__c.field-meta.xml
<CustomField>
    <fullName>Unplanned__c</fullName>
    <label>Unplanned</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>