force-app/main/default/objects/Line_Met_Dimension__c/fields/Unposted__c.field-meta.xml
<CustomField>
    <fullName>Unposted__c</fullName>
    <label>Unposted</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>