force-app/main/default/objects/Line_Met_Dimension__c/fields/Usage_Bookings_YTD__c.field-meta.xml
<CustomField>
    <fullName>Usage_Bookings_YTD__c</fullName>
    <label>Usage Bookings YTD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>