force-app/main/default/objects/Line_Met_Dimension__c/recordTypes/Functional.recordType-meta.xml
<RecordType>
    <fullName>Functional</fullName>
    <active>true</active>
    <label>Functional</label>
</RecordType>