force-app/main/default/objects/Line_Met_Dimension__c/recordTypes/Transaction.recordType-meta.xml
<RecordType>
    <fullName>Transaction</fullName>
    <active>true</active>
    <label>Transaction</label>
</RecordType>